# badoo-bot

./: Dockerfile  README.md  docker-compose.yml  gitignore  makefile  pyproject.toml  requirements-dev.txt  requirements.txt
src/: main.py
src/core/: browser_manager.py
src/core/services/browser/: browser_manager.py
src/core/services/cache/: cache_manager.py
